# exemplo_extensao_php_rust

./: Cargo.toml  README.md  basico_hello.php  benchmark_php_puro.php  benchmark_rust.php  benchmark_rust_parallel.php  exemplo_completo.php
src/: benchmarks.rs  lib.rs  wead.rs
