[package]
name = "hello_php"
version = "1.0.0"
edition = "2021"
authors = ["Adriano Maciel <wead.tech>"]
license = "LicenseRef-Proprietary"

[lib]
name = "hello_php"
crate-type = ["cdylib", "rlib"]

[dependencies]
ext-php-rs = { version = "0.15" }
rayon = "1.10"

[dev-dependencies]
once_cell = "1.21"

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
opt-level = 3
